add auth middleware and send notify from queue to websocket
