# tour-service/internal/module/tour/transport/rest/api.go
@@ -2,11 +2,17 @@ package rest
 
 import (
 	"context"
+	"fmt"
+	"github.com/trekking-mobile-app/internal/utils"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/trekking-mobile-app/internal/module/tour/entity"
 	"github.com/trekking-mobile-app/internal/pkg/paging"
+)
+
+const (
+	createTourPermission = "create_tour"
 )
 
 type Business interface {
@@ -37,9 +43,31 @@ func NewAPI(biz Business) *api {
 // @Param tour body entity.Tour true "Thông tin tour"
 // @Success 200 {object} entity.Tour
 // @Failure 400 {object} map[string]string
-// @Router /tours [post]
+// @Router /api/v1/tours [post]
 func (a *api) CreateTourHdl() gin.HandlerFunc {
 	return func(c *gin.Context) {
+		userRole, exist := c.Get("userRole")
+		if !exist {
+			responseUnauthorized(c, fmt.Errorf("user role not found in context"))
+			return
+		}
+
+		if userRole.(string) != "host" {
+			responseUnauthorized(c, fmt.Errorf("user is not authorized to perform this action"))
+			return
+		}
+
+		userPermissions, exist := c.Get("userPermissions")
+		if !exist {
+			responseUnauthorized(c, fmt.Errorf("user permissions not found in context"))
+			return
+		}
+
+		if !utils.CheckUserPermission(createTourPermission, userPermissions.([]string)) {
+			responseForbidden(c, fmt.Errorf("user does not have permission to create tour"))
+			return
+		}
+
 		data := new(entity.Tour)
 		if err := c.ShouldBindJSON(&data); err != nil {
 			responseError(c, err)
@@ -64,10 +92,10 @@ func (a *api) CreateTourHdl() gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param page query int false "Trang hiện tại"
-// @Param limit query int false "Số lượng mỗi trang"
+// @Param size query int false "Số lượng mỗi trang"
 // @Success 200 {array} entity.Tour
 // @Failure 400 {object} map[string]string
-// @Router /tours [get]
+// @Router /api/v1/tours [get]
 func (a *api) ListTourHdl() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		listTours, err := a.biz.ListTours(c, paging.GetQueryPaging(c))
@@ -90,7 +118,7 @@ func (a *api) ListTourHdl() gin.HandlerFunc {
 // @Param id path string true "Tour ID"
 // @Success 200 {object} entity.Tour
 // @Failure 400 {object} map[string]string
-// @Router /tours/{id} [get]
+// @Router /api/v1/tours/{id} [get]
 func (a *api) GetTourHdl() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tourId := c.Param("id")
@@ -119,7 +147,7 @@ func (a *api) GetTourHdl() gin.HandlerFunc {
 // @Param tour body entity.TourPatchData true "Dữ liệu cần cập nhật"
 // @Success 200 {object} map[string]string
 // @Failure 400 {object} map[string]string
-// @Router /tours/{id} [patch]
+// @Router /api/v1/tours/{id} [patch]
 func (a *api) UpdateTourHdl() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tourId := c.Param("id")
@@ -154,7 +182,7 @@ func (a *api) UpdateTourHdl() gin.HandlerFunc {
 // @Param id path string true "Tour ID"
 // @Success 200 {object} map[string]string
 // @Failure 400 {object} map[string]string
-// @Router /tours/{id} [delete]
+// @Router /api/v1/tours/{id} [delete]
 func (a *api) DeleteTourHdl() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		tourID := c.Param("id")
